# tiktok-downloader

./: .gitignore  README.md  main.py  pyproject.toml  tiktok_links.txt
lib/: argument_parsing.py  downloader.py
src/tiktok_downloader/: main.py
src/tiktok_downloader/lib/: argument_parsing.py
